correct answer align (bug 1790)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Quiz.less
@@ -217,7 +217,7 @@
     }
     label{
         position: absolute;
-        right: 17px; /*rtl*/
+        right: 19px; /*rtl*/
         &:before {
             opacity: .5;
         }
