--- a/Zbang.Cloudents.Mvc4WebRole/Content/RTL3.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/RTL3.less
@@ -2098,7 +2098,7 @@
     }
 
     label {
-        left: 17px; /*rtl*/
+        left: 19px; /*rtl*/
         right: auto;
     }
 
